working on project_shrimp.html

--- a/project_guilib.html
+++ b/project_guilib.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project Title</title>
+    <title>Project sweet gui</title>
     <link rel="stylesheet" href="styles.css">
       <link rel="stylesheet" href="custom.css"> <!-- Highlight.js theme -->
 </head>
@@ -28,10 +28,10 @@
         <h2>Making a GUI library in C</h2>
         <i style="color: #00abf0;"> june 2023- 4 minutes read</i>
         <br>
-        <p>C and C++ has some good gui libraries like qt, gtk, nuklear and imgui but all of are not easy to use and makes you write alot of boiler plate codes. So i decided to create mine from Scratch with focus on easy of use</p>
+        <p>C and C++ has some good gui libraries like qt, gtk, nuklear and imgui but all of them are not easy to use and makes you write alot of boiler plate codes compared to something like tkinter. So i tried to create mine from Scratch with focus on easy of use.</p>
         <img src="files/sweet/guiscr.png" alt="Project Image" style="width: 100%; height: auto;">
 
-                <p>The image above is demo of Sweet; my Gui library. The demo shows a simple showcase of text, label, slider, dropdown and button widgets.</p>
+                <p>The image above is demo of Sweet; my Gui library. The demo shows a simple showcase of text, label, slider, dropdown and button widgets. you can find the source code on this <a href="https://github.com/gpu-governor/Sweet">github repo</a>.</p>
         
         <h3>Tech Stack</h3>
         <p>C, SDL graphics framework, clang compiler.</p>
@@ -67,10 +67,10 @@
                sw_quit();
                return 0;
            }
-           
           </code>
         </pre>
-
+        <p>view the project <a href="https://github.com/gpu-governor/Sweet">source code</a>.</p>
+        <br>
         <hr>
         <h3>ScreenShots</h3>
         <p>More Screen shots from the project :</p>
