--- a/project_shrimp.html
+++ b/project_shrimp.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project Title</title>
+    <title>Project shrimp</title>
     <link rel="stylesheet" href="styles.css">
       <link rel="stylesheet" href="syntax_highlight/xt256.css"> <!-- Highlight.js theme -->
 </head>
@@ -25,15 +25,20 @@
 
     <!-- Project Details Section -->
     <section class="project-details">
-        <h2>Project Description</h2>
-        <i style="color: #00abf0;"> june 2023- 4 minutes read</i>
+        <h2>Making an image editor software</h2>
+        <i style="color: #00abf0;"> october 2023- 4 minutes read</i>
         <br>
-        <p>Detailed description of the project, objectives, and results.</p>
-        <img src="files/sweet/guiscr.png" alt="Project Image" style="width: 100%; height: auto;">
+        <p>As at october 20 i started learning computer vision with the opencv library and after following a series of tutorials on youtube i decided to create a project that will require image processing to test what i have learned in opencv so far. So i came up with the ideal to create an image editor as a Desktop Application.</p>
+        <img src="files/shrimp/shrimp.png" alt="Project Image" style="width: 100%; height: auto;">
+        <p>The above image is a screenshot of my image editor in action, the project is called shrimp meaning smart high resolution image manipulation program. check out the <a href="https://github.com/gpu-governor/shrimp">github repo</a></p>
         <h3>Tech Stack</h3>
-        <p>Python, TensorFlow, Keras, etc.</p>
+        <p>Python, opencv, tkinter, numpy.</p>
         <h3>Challenges & Learnings</h3>
-        <p>Describe challenges faced during the project and key learnings.</p>
+        <p>The project uses tkinter for it's user interface and it uses opencv for image manipulation.</p>
+        <ul>
+            <li>blur: yu ca</li>
+            <li>rotation</li>
+        </ul>
     </section>
 
     <!-- Back Link -->
