--- a/web_template_archive/project.html
+++ b/web_template_archive/project.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project Title</title>
     <link rel="stylesheet" href="styles.css">
+      <link rel="stylesheet" href="syntax_highlight/xt256.css"> <!-- Highlight.js theme -->
 </head>
 <body>
     <!-- Header -->
     <header class="header">
-        <h1>Project Title</h1>
+        <h1>GPU Governor</h1>
 
         <!-- Navbar -->
         <nav class="navbar">
@@ -25,7 +26,10 @@
     <!-- Project Details Section -->
     <section class="project-details">
         <h2>Project Description</h2>
+        <i style="color: #00abf0;"> june 2023- 4 minutes read</i>
+        <br>
         <p>Detailed description of the project, objectives, and results.</p>
+        <img src="files/sweet/guiscr.png" alt="Project Image" style="width: 100%; height: auto;">
         <h3>Tech Stack</h3>
         <p>Python, TensorFlow, Keras, etc.</p>
         <h3>Challenges & Learnings</h3>
@@ -36,5 +40,8 @@
     <footer>
         <p><a href="index.html">Back to Portfolio</a></p>
     </footer>
+      <script src="syntax_highlight/highlight.min.js"></script>
+    <script>hljs.highlightAll();</script>
+
 </body>
 </html>
