--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
     <section id="contact" class="contact">
         <h2>Contact</h2>
         <p>Email: gpu.governor@gmail.com</p>
-        <p><a>LinkedIn</a></p>
-        <p><a>GitHub</a></p>
+        <p><a>resume</a></p>
+        <p><a href="https://github.com/gpu-governor">GitHub</a></p>
+        <p><a href="https://x.com/gpu_governor">x</a></p>
     </section>
 
     <!-- Skills Section -->
@@ -89,13 +90,15 @@
         <div class="blog-list">
             <!-- Blog Post 1 -->
             <div class="blog-item">
-                <h3>We need to talk about SDL</h3>
-                <p>The popular simple Direct media layer.</p>
+                <a href="blog_cpp_bad.html">
+                    <h3>Why C++ is bad for video Game Engine scripting</h3>
+                <p>memory flaws, slow compile time.</p>
+                </a>
             </div>
             <!-- Blog Post 2 -->
             <div class="blog-item">
-                <h3>Why C++ is bad for video Game Engine scripting</h3>
-                <p>the ugly side of c++.</p>
+                <h3>How i Learned arm assembly</h3>
+                <p>Assembly programming.</p>
             </div>
             
             <!-- Add more blog posts as needed -->
