--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!-- About Section -->
     <section class="about">
         <h2>About Me</h2>
-        <p>I am a C++ developer majoring in computer Graphics and Systems programing, i am also interested in computer vision and building Desktop applications. My legal name is nzeogwu okuchukwu.</p>
+        <p>I am a C++ developer majoring in Systems programming, computer Graphics and software emulation, i am also interested in building Desktop applications and indie game dev.</p>
     </section>
 
     <!-- Contact Section -->
@@ -47,6 +47,9 @@
             <li>OpenCV</li>
             <li>Raylib</li>
             <li>SDL</li>
+            <li>C#</li>
+            <li>Maui</li>
+            <li>Rust</li>
             <!-- Add more skills here -->
         </ul>
     </section>
